[project]
name = "roby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "arena==0.0.5",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "firebase-admin==6.6.0",
    "httpcore==1.0.2",
    "httplib2==0.22.0",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "httpx-sse==0.4.0",
    "jinja2==3.1.5",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "ollama==0.4.7",
    "onnxruntime>=1.21.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "rembg>=2.0.65",
    "uvicorn>=0.34.0",
]
